Bug 414568 - Incorrect applying of an auto layout for spline line type
Summary: Incorrect applying of an auto layout for spline line type
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.29.3 (KDE Applications 19.08.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks: 414511
  Show dependency treegraph
 
Reported: 2019-11-27 12:10 UTC by Ralf Habacker
Modified: 2019-12-02 23:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.90 (KDE Applications 19.11.90)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-11-27 12:10:06 UTC
SUMMARY

STEPS TO REPRODUCE
1. start umbrello
2. open settings dialog
3. set "Create new association lines as" to spline
4. add state diagram
4. add two states
5. connect first added state with second
5. connect second added state with first
6. apply "vertical" layout
7. select association

OBSERVED RESULT
The spline can no longer be edited

EXPECTED RESULT
The spline should be editable

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE_Leap_15.1
KDE Frameworks Version: 5.55
Qt Version: 5.9.7

ADDITIONAL INFORMATION
A workaround is to set line layout type to direct and back to spline
Comment 1 Ralf Habacker 2019-11-27 12:32:39 UTC
Git commit 3b6a7d4e641eb9a109ab9c55e7b6a90ed8d50f56 by Ralf Habacker.
Committed on 27/11/2019 at 12:32.
Pushed by habacker into branch 'release/19.12'.

Fix 'Incorrect applying of an auto layout for spline line type'
FIXED-IN:2.30.0 (KDE Applications 19.12.0)

M  +1    -0    umbrello/layoutgenerator.cpp

https://invent.kde.org/kde/umbrello/commit/3b6a7d4e641eb9a109ab9c55e7b6a90ed8d50f56