Fix 'Incorrect applying of an auto layout for spline line type'

BUG:414568
FIXED-IN:2.30.0 (KDE Applications 19.12.0)